--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Tailwind CSS Boilerplate</title>
-
+    <title>Norasil - Links</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,11 +27,11 @@
     />
   </head>
 
-  <body class="bg-white w-full h-screen">
+  <body class="bg-white w-full h-screen m-0 p-0 box-border">
     <div
-      class="container mx-auto h-full flex flex-col items-center py-32 p-4 gap-4"
+      class="container mx-auto h-full flex flex-col items-center justify-center p-4 gap-4"
     >
-      <div class="rounded-full overflow-hidden">
+      <div class="rounded-full overflow-hidden my-4">
         <img src="./img/logo.svg" width="150" height="150" alt="Logo" />
       </div>
       <div class="text-center">
